--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-tesla-api",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Async style api for tesla",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "dependencies": {
     "async-ws": "^0.1.1",
     "axios": "^0.19.2",
-    "lodash": "^4.17.15"
+    "co-lodash": "^0.2.0"
   },
   "devDependencies": {
     "ws": "^7.2.5"
